@@ -1,3 +1,8 @@
+2008-08-29  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* DeserializeOptionalFieldTest.cs: Use newer, shorter, syntax for
+	unit tests.
+
 2008-08-11  Nestor Salceda  <nestor.salceda@gmail.com>
 
 	* ImplementISerializableCorrectlyTest.cs: New.  Unit tests for
